--- a/mobile/package.json
+++ b/mobile/package.json
@@ -1,7 +1,7 @@
 {
   "name": "bidathlete-mobile",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "src/App.tsx",
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
@@ -9,25 +9,32 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "react": "18.2.0",
-    "react-native": "0.73.2",
-    "expo": "~50.0.0",
+    "@expo/metro-runtime": "~3.1.3",
+    "@react-native-async-storage/async-storage": "1.21.0",
+    "@react-navigation/bottom-tabs": "^6.5.11",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/native-stack": "^6.9.17",
-    "@react-navigation/bottom-tabs": "^6.5.11",
+    "@react-navigation/stack": "^6.3.20",
     "@reduxjs/toolkit": "^2.0.1",
-    "react-redux": "^9.0.4",
     "axios": "^1.6.5",
-    "socket.io-client": "^4.6.1",
-    "@react-native-async-storage/async-storage": "^1.21.0",
-    "expo-notifications": "~0.27.0",
+    "expo": "~50.0.0",
     "expo-auth-session": "~5.4.0",
+    "expo-notifications": "~0.27.0",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-native": "0.73.6",
+    "react-native-reanimated": "^4.1.5",
     "react-native-safe-area-context": "4.8.2",
-    "react-native-screens": "~3.29.0"
+    "react-native-screens": "~3.29.0",
+    "react-native-vector-icons": "^10.0.3",
+    "react-native-web": "~0.19.6",
+    "react-redux": "^9.0.4",
+    "socket.io-client": "^4.6.1"
   },
   "devDependencies": {
     "@babel/core": "^7.23.7",
     "@types/react": "~18.2.45",
+    "@types/react-native-vector-icons": "^6.4.18",
     "typescript": "^5.3.3"
   }
 }
