--- a/mobile/tsconfig.json
+++ b/mobile/tsconfig.json
@@ -2,7 +2,9 @@
   "compilerOptions": {
     "target": "ES2020",
     "module": "esnext",
-    "lib": ["es2020"],
+    "lib": [
+      "es2020"
+    ],
     "jsx": "react-native",
     "moduleResolution": "node",
     "esModuleInterop": true,
@@ -13,6 +15,12 @@
     "noEmit": true,
     "isolatedModules": true
   },
-  "include": ["src/**/*"],
-  "exclude": ["node_modules", "babel.config.js"]
+  "include": [
+    "src/**/*"
+  ],
+  "exclude": [
+    "node_modules",
+    "babel.config.js"
+  ],
+  "extends": "expo/tsconfig.base"
 }
