--- a/mobile/package.json
+++ b/mobile/package.json
@@ -35,6 +35,7 @@
     "@babel/core": "^7.23.7",
     "@types/react": "~18.2.45",
     "@types/react-native-vector-icons": "^6.4.18",
+    "metro-react-native-babel-preset": "^0.77.0",
     "typescript": "^5.3.3"
   }
 }
